--- a/views/admin/product/add.hbs
+++ b/views/admin/product/add.hbs
@@ -32,8 +32,17 @@
                         {{/each}}
                     </select>
                     <br><br>
-                    <button type="submit" class = 'btn btn-outline-warning'>Add</button>
-                    
+                    Product Date:<input type="date" name="date" id required>
+                    <br><br>
+                    <br><br>
+                    Product Quantity:
+
+                    <input type="number" name="quantity" id
+                        required>
+                    <br><br>
+                    <button type="submit"
+                        class='btn btn-outline-warning'>Add</button>
+
                 </form>
             </div>
         </div>
