--- a/views/admin/product/index.hbs
+++ b/views/admin/product/index.hbs
@@ -41,7 +41,8 @@
 
                     <a class='btn btn-primary mb-3' href='/product/add'>Add new
                         product</a>
-                    <a href="/product/deleteall" class='btn btn-danger mb-3'>Delete
+                    <a href="/product/deleteall"
+                        class='btn btn-danger mb-3'>Delete
                         All</a>
 
                     <table class='table table-hover'>
@@ -53,7 +54,10 @@
                                 <th scope='col'>Price</th>
                                 <th scope='col'>Category</th>
                                 {{!-- <th scope='col'>Country</th> --}}
+                                <th scope='col'>Quantity</th>
+                                <th scope='col'>Date</th>
                                 <th scope='col'>Action</th>
+
                             </tr>
                         </thead>
                         {{!-- Lặp dữ liệu từ collection products ra --}}
@@ -74,6 +78,8 @@
                                 {{!-- category là tên khai báo trường trong
                                 product, có kiểu ObjectId, name là tên trường
                                 của collection mang ObjectId --}}
+                                <td>{{quantity}}</td>
+                                <td>{{date}}</td>
                                 <td>
                                     <a
                                         class='btn btn-outline-warning'
